rip quil out entirely, replacing with a simple 'litequil' implementation that just uses Graphics2D directly. update some deps.. need to see if I can bump dl4j up, it's so stale.